--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-	<div id="container">
+	<div id="container" class="container">
 		<header>
 		<menu><div id="topNav"><%= render 'layouts/top_nav' %></div></menu>
 		<!-- <h1>Belightful Yoga.  Mobile Yoga, we come to U.</h1> -->
