--- a/app/views/carts/_billing.html.erb
+++ b/app/views/carts/_billing.html.erb
@@ -24,12 +24,14 @@
   
 <% end %>
 
+<% if @cart.shippable? %>
 <div class="control-group">
   <%= f.label :ship_to_billing, "Ship to this address?", :class => "control-label" %>
 	<div class="controls">
 		<%= f.check_box :ship_to_billing %>
 	</div>
 </div>
+<% end %>
 
 <% if params[:new_billing].present? %>
 <div class="control-group">
