--- a/app/views/carts/_waiver.html.erb
+++ b/app/views/carts/_waiver.html.erb
@@ -1,184 +1,50 @@
-<link href="/stylesheets/waiver.css" media="all" rel="stylesheet" type="text/css" />
+<h2>Liability Waiver</h2>
+
+<div class="well">
+	<p>Please complete the Liability Waiver below.  If applicable, you will be prompted to complete forms for additional registrants.</p>
+	<% if @cart.multiple_registrants? %>
+		<h4>Current Progress</h4>
+		<ul>
+			<li><%= @cart.user.full_name %> <%= @cart.user_waiver.present? && @cart.user_waiver.valid? ? link_to(raw("<i class='icon-check text-success'></i>"), cart_waiver_path(@cart, @cart.user_waiver), target: "_blank") : raw("<i class='icon-edit text-error'></i>") %></li>
+			<% @cart.non_users.each do |non_user| %>
+				<li><%= non_user.name %> <%= non_user.waiver.present? && non_user.waiver.valid? ? link_to(raw("<i class='icon-check text-success'></i>"), cart_waiver_path(@cart, non_user.waiver), target: "_blank") : raw("<i class='icon-edit text-error'></i>") %></li>
+			<% end %>
+		</ul>
+	<% end %>
+</div>
+
+
 
 
 
 <%= error_messages_for(@cart) %>
 
-<div class='WordSection1' style='width:700px;'>
-  
-  
-<%= form_for @cart, :url => update_checkout_cart_path(@cart), :html => { :method => :put} do |f| %>
+
+<div class="waiver-form">
+	
+	
+	<%
+	if params[:action] == "update_checkout"
+		
+		if @waiver.user.present?
+			@waiver = @cart.waivers.select{|key| key[:user_id] == @waiver.user.id}
+		elsif @waiver.non_user.present?
+			@waiver = @cart.waivers.select{|key| key[:non_user_id] == @waiver.non_user.id }
+		end	
+		
+	end	
+	%>
+	
+
+<%= form_for @cart, :url => update_checkout_cart_path(@cart), :html => { class: "form-inline", :method => :put} do |f| %>
 <%= hidden_field_tag :stage, @stage %>
 
-<%= f.fields_for :waiver do |waiver| %>
+<% unless @waiver.nil? %>
+<%= f.fields_for :waivers, @waiver do |waiver| %>
 
+	<%= render '/waivers/form', waiver: waiver %>
 
-<p class=MsoTitle><span style='font-size:14.0pt;text-decoration:none'>Belightful
-Yoga, LLC</span></p>
-
-<p class=MsoTitle><span style='font-size:14.0pt;text-decoration:none'>Classes/Workshops/Series</span></p>
-
-<p class=MsoTitle style='margin-bottom:24.0pt'><span style='font-size:14.0pt'>Agreement
-of Release and Waiver of Liability</span></p>
-
-
-<br />
-
-<div class=MsoNormal style='margin-bottom:6.0pt;line-height:150%'><span style='font-size:10.0pt;line-height:150%;font-family:Arial'>
-First Name: <%= waiver.text_field :first_name, :style => "width:190px;" %> &nbsp; 
-Middle Initial: <%= waiver.text_field :middle_initial, :style => "width:20px;" %> &nbsp; 
-Last Name: <%= waiver.text_field :last_name, :style => "width:190px;" %> &nbsp; 
-</span></div>
-
-<div class=MsoNormal style='margin-bottom:6.0pt;line-height:150%'><span style='font-size:10.0pt;line-height:150%;font-family:Arial'>
-Address Line 1: <%= waiver.text_field :address_1, :style => "width:552px;" %> &nbsp; 
-</span></div>
-
-<div class=MsoNormal style='margin-bottom:6.0pt;line-height:150%'><span style='font-size:10.0pt;line-height:150%;font-family:Arial'>
-Address Line 2: <%= waiver.text_field :address_2, :style => "width:552px;" %> &nbsp; 
-</span></div>
-
-<div class=MsoNormal style='margin-bottom:6.0pt;line-height:150%'><span style='font-size:10.0pt;line-height:150%;font-family:Arial'>
-City: <%= waiver.text_field :city, :style => "width:232px;" %> &nbsp; 
-State: <%= waiver.select :state, us_states, { :include_blank => true }, :style => "width:189px;" %> &nbsp; 
-Zip: <%= waiver.text_field :postal_code, :style => "width:100px;" %> &nbsp; 
-</span></div>
-
-<div class=MsoNormal style='margin-bottom:6.0pt;line-height:150%'><span style='font-size:10.0pt;line-height:150%;font-family:Arial'>
-Home Phone: <%= waiver.text_field :home_phone, :style => "width:165px;" %> &nbsp; 
-Work Phone: <%= waiver.text_field :work_phone, :style => "width:165px;" %> &nbsp; 
-Ext.: <%= waiver.text_field :work_phone_ext, :style => "width:100px;" %> &nbsp; 
-</span></div>
-
-<div class=MsoNormal style='margin-bottom:6.0pt;line-height:150%'><span style='font-size:10.0pt;line-height:150%;font-family:Arial'>
-Cell Phone: <%= waiver.text_field :cell_phone, :style => "width:210px;" %> &nbsp; 
-Birth Date: <%= waiver.date_select :birth_date, { :discard_year => true, :prompt => true }, :style => "width:105px;" %><%#= waiver.text_field :birth_date, :style => "width:205px;" %>&nbsp;
-</span></div>
-
-<div class=MsoNormal style='margin-bottom:6.0pt;line-height:150%'><span style='font-size:10.0pt;line-height:150%;font-family:Arial'>
-Email Address: <%= waiver.text_field :email_address, :style => "width:210px;" %> &nbsp; 
-Occupation: <%= waiver.text_field :occupation, :style => "width:259px;" %>&nbsp; 
-</span></div>
-
-<div class=MsoNormal style='margin-bottom:6.0pt;line-height:150%'><span style='font-size:10.0pt;line-height:150%;font-family:Arial'>
-Emergency Contact: <i>(Name, Phone and Relationship) </i><br />
-
-<%= waiver.text_area :emergency_contact %>
-</span></div>
-
-
-<div class=MsoNormal style='margin-bottom:6.0pt;line-height:150%'><span style='font-size:10.0pt;line-height:150%;font-family:Arial'>
-How did you hear about us?<br />
-<%= waiver.text_area :referral %>
-</span></div>
-
-
-<br />
-<br />
-
-
-<div class=MsoNormal style='text-align:justify'><span style='font-size:10.0pt'>1.
-I am a participant in Yoga Classes, Wellness Programs or Workshops offered by Belightful
-Yoga, LLC (hereinafter “Belightful Yoga, LLC, ”, which includes all of its
-employees, agents, contractors, associates and representatives”). As a
-participant, I will receive information and instruction about yoga and health.
-I recognize that yoga requires physical exertion, which may be strenuous and
-may cause physical injury, and I am fully aware of the risks and hazards
-involved. 2. In consideration of being permitted to participate in Yoga
-Classes, Wellness Programs or Workshops, I agree to assume full responsibility
-for any risks, injuries or damages, known or unknown, which I might incur as a
-result of participation in the program. 3. I understand during classes at Belightful
-Yoga, LLC, instructors may physically adjust me. I release all personnel associated
-with Belightful Yoga, LLC from any claim whatsoever on account of adjustments,
-treatment or service rendered during my participation in Yoga Classes, Wellness
-Programs or Workshops. 4. In further consideration of being permitted to
-participate in Yoga Classes, Wellness Programs or Workshops, I knowingly, voluntarily
-and expressly waive any claim I may have against Belightful Yoga, LLC for
-injury or damage that I may sustain as a result of participation in Yoga
-Classes, Wellness Programs or Workshops. 5. I understand that it is my
-responsibility to consult a physician prior to and regarding my participation
-in Yoga Classes, Wellness Programs or Workshops. I represent and warrant that I
-am physically fit and I have no medical condition, which would prevent my
-participation in the Yoga Classes, Wellness Programs or Workshops. 6. I assume
-all responsibility, for all risks of damage or injury that may occur to me as a
-student of the Belightful Yoga, LLC courses and instruction while attending
-classes, participation in exercises, using the assigned Belightful Yoga, LLC
-locations. 7. I, my heirs or legal representatives forever release, waive,
-discharge and covenant not to sue Belightful Yoga, LLC for any injury or death
-caused by their negligence or other acts. 8. Furthermore, I give permission to Belightful
-Yoga, LLC to use photographs and/or comments in which I or family members have
-or are featured. Photographs and/or testimonials obtained during a Belightful
-Yoga, LLC sponsored event may be shared with program participants, and/or used
-as a part of a public display which may include the Belightful Yoga, LLC
-website and/or print and electronic publications. 9. I understand all
-classes/series are non-refundable and non-transferable. 10. Payment of
-Services: Students must provide full payment prior to participation in class.
-11. Returned Checks: All returned checks will be charged a $35.00 processing
-fee. </span></div>
-
-<p class=MsoBodyText><b><i><span style='font-size:11.0pt'>I acknowledge that I
-have read this document in its entirety or, if I am unable to read the form, it
-has been read to me in its entirety.  I have had an opportunity to ask
-questions, which have been answered to my<br>
-satisfaction.  I voluntarily consent to the terms and conditions stated above. </span></i></b></p>
-
-
-<br />
-
-
-
-<div class=MsoNormal>
-  <%= waiver.text_field :signature, :style => "width:436px;" %> &nbsp; &nbsp; &nbsp; <%= Date.today.strftime("%m/%d/%Y")%></p>
-
-<div class=MsoNormal style='position:relative;'><span style='font-size:9.0pt;font-family:Arial;position:absolute;left:0;'>Signature</span><span style='font-size:9.0pt;font-family:Arial;position:absolute;right:193px;'>Date</span></div>
-
-
-
-<br />
-
-<div class=MsoNormal><u><span style='font-size:11.0pt'>If
-Under 18 Years Of Age</span></u><span style='font-size:11.0pt'>: As parent/legal
-guardian of <%= waiver.text_field :guardian_of, :style => "width:324px;" %>,</span></div>
-
-<br />
-
-<div class=MsoNormal><span style='font-size:11.0pt'>I
-consent to the above terms and conditions. </span></div>
-
-<div class=MsoNormal><%= waiver.text_field :guardian_signature, :style => "width:436px;" %>
-   &nbsp; &nbsp; &nbsp; <%= Date.today.strftime("%m/%d/%Y")%></div>
-
-<div class=MsoNormal style='position:relative;'><span style='font-size:9.0pt;font-family:Arial;position:absolute;left:0;'>Signature of Parent</span><span style='font-size:9.0pt;font-family:Arial;position:absolute;right:193px;'>Date</span></div>
-
-<% if @cart.has_family_course? %>
-<br style="clear:both;" />
-<h2><span style='font-size:14.0pt;text-decoration:none'>Other Family Members Attending</span></h2>
-<p style="font-style:italic;">Applies to Course(s): <%= @cart.family_courses.collect { |course| course.line_itemable.line_item_title }.join(', ') %></p>
-
-    <div id="waiver_guests">
-    <%= waiver.fields_for :guests do |guest| %>
-        <%= render 'waiver_guest', :f => guest %>
-    <% end %>  
-    </div>
-    <%= link_to_add_guest("Add Family Member", waiver, :guests) %>  
-    
 <% end %>
-
-<!-- 
-[showif [isFamily]=yes]
-<br style="clear:both;" />
-<h2><span style='font-size:14.0pt;text-decoration:none'>Other Family Members Attending</span></h2>
-
-[loop start=1&end=7]
-<div class=MsoNormal style='margin-bottom:6.0pt;line-height:150%'><span style='font-size:10.0pt;line-height:150%;font-family:Arial'>
-Name: <input type="text" name="familyname[index]" value="[interpret][familyname[index]][/interpret]" style="width:500px;" /> &nbsp; 
-Age: <input type="text" name="familyage[index]" value="[interpret][familyage[index]][/interpret]" style="width:62px;" /> &nbsp; 
-</span></div>
-[/loop]
-[/showif]
--->
-
-
 <% end %>
 
 
@@ -187,6 +53,5 @@ Age: <input type="text" name="familyage[index]" value="[interpret][familyage[ind
 </div>  
 
 <% end %>
-
 
 </div>
