--- a/app/views/user_mailer/registration_confirmation.html.erb
+++ b/app/views/user_mailer/registration_confirmation.html.erb
@@ -8,6 +8,6 @@ Time: <%= "#{@course.day.pluralize}" %> <%= "#{@course.start_time.strftime('%l:%
 <%= link_to image_tag("http://belightfulyoga.com/images/addToCalendar.png", :style => "width:193px;height:32px;border-width:0;"), ics_course_url(@course) %>
 </p>
 
-<p style="align:center;"><a href="http://www.facebook.com/belightfulyoga"><img src="http://belightfulyoga.com/images/facebook_joinus.jpg" style="border:none;"></a></p>
+<p style="align:center;"><a href="http://www.facebook.com/belightfulyoga"><img src="http://www.belightfulyoga.com/assets/facebook_32.png" style="border:none;"></a></p>
 
 <p>Thank you and we look forward to seeing you there!</p>
