--- a/app/views/layouts/_account.html.erb
+++ b/app/views/layouts/_account.html.erb
@@ -1,10 +1,11 @@
-
+<% if current_user.client_group.present? %>
 <h2 style="background-color:#262262;color:#FFFFFF;margin-right:20px;padding:5px;"><%= current_user.client_group.title %></h2>
 <ul class="nav nav-list">
 <%= content_tag :li, link_to("Available Classes", client_group_courses_path(current_user.client_group)) %>
 </ul>
 
 <hr>
+<% end %>
 
 <h2>Your Account</h2>
 <ul class="nav nav-list">
