--- a/app/views/scheduler/pay_outs/show.html.erb
+++ b/app/views/scheduler/pay_outs/show.html.erb
@@ -81,7 +81,7 @@
 	<tr>
 		<td><%= c.object.event_date.strftime('%m/%d/%Y') %></td>
 		<td><%= c.object.event_date.strftime('%l:%M%p') %></td>
-		<td><%= c.object.course.client_group.title %></td>
+		<td><%= c.object.course.client_group.title if c.object.course.client_group.present? %></td>
 		<td><span class="label">ID: <%= c.object.course.id %></span> <%= "#{c.object.course.default_title}" %>
 		<td><%= c.object.course_registrations.length %></td>
 		<td><%= c.object.walkins.length %> <%= "(+#{number_to_currency(c.object.walkin_pay_out)})" if c.object.walkins.any? %></td>
