--- a/app/views/scheduler/course_events/index.html.erb
+++ b/app/views/scheduler/course_events/index.html.erb
@@ -53,7 +53,7 @@
 	    <td><%= check_box_tag "course_event_ids[]", course_event.id %></td>
 		<td><%= course_event.event_date.strftime('%m/%d/%Y') %></td>
 		<td><%= course_event.event_date.strftime('%l:%M%p') %></td>
-		<td><%= content_tag :i, "", :class => "icon-star" if course_event.is_first? %><%= course_event.course.client_group.title %></td>
+		<td><%= content_tag :i, "", :class => "icon-star" if course_event.is_first? %><%= course_event.course.client_group.title if course_event.course.client_group.present? %></td>
 		<td><%= content_tag :span, course_event.teacher.full_name, :class => "label btn-block", :style => "background-color:##{course_event.teacher.color};color:black;" %></td>
 		<td><%= link_to raw("ID: #{course_event.course.id}"), "/admin/course/#{course_event.course.id}/edit", :target => "_blank", :class => "btn btn-mini"%> <%= "#{course_event.course.default_title}" %>
 		<td>
