--- a/app/views/scheduler/courses/index.html.erb
+++ b/app/views/scheduler/courses/index.html.erb
@@ -51,7 +51,7 @@
         <td><%= link_to raw("ID: #{course.id}"), "/admin/course/#{course.id}/edit", :target => "_blank", :class => "btn btn-mini"%> <%= "#{course.default_title}" %></td>
         <td><%= course.start_date.strftime('%m/%d/%Y') %></td>
         <td><%= course.end_date.strftime('%m/%d/%Y') %></td>
-        <td><%= course.client_group.title %></td>
+        <td><%= course.client_group.title if course.client_group.present? %></td>
         <td><%= content_tag :span, course.teacher.full_name, :class => "label btn-block", :style => "background-color:##{course.teacher.color};color:black;" %></td>
 				<td style="text-align:right;"><%= content_tag :b, course.course_registrations.length, :class => course.course_registrations.length == 0 ? "text-error" : "text-success" %><%=  %></td>
         <td nowrap><%= link_to raw("<i class='icon-pencil'></i> Schedule"), edit_scheduler_course_path(course), :class => "btn btn-small" if current_admin.admin? %></td>
