--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -1,3 +1,2 @@
-<%= content_for :sidebar do %><%= render 'layouts/account' %><% end %>
-
+<% content_for :sidebar do %><%= render 'layouts/account' %><% end %>
 <%= render :template => 'layouts/application' %>
