--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<% content_for :body do %>
 <h1 class="lefttab">Register</h1>
 
 <div id="cartWin">
@@ -52,3 +53,4 @@
 <%= render "users/links" %>
 
 </div>
+<% end %>
