--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,3 +1,4 @@
+<% content_for :body do %>
 <h1 class="lefttab">Change Password</h1>
 
 <div id="cartWin">
@@ -26,3 +27,4 @@
 <%= render "users/links" %>
 
 </div>
+<% end %>
