--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,3 +1,4 @@
+<% content_for :body do %>
 <h1 class="lefttab">Edit Your Account</h1>
 
 <div id="cartWin">
@@ -37,3 +38,4 @@
 <% end %>
 
 </div>
+<% end %>
